--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
+	<title>Feliz CUM Andrés</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday">
@@ -27,7 +27,6 @@
 	<link rel="stylesheet/less" href="cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
-
 <body>
 	<div class="loading"></div>
 	<audio class="song" controls loop>
@@ -35,25 +34,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h4 style="color:#F2B300;">A</h4>
+    	<h4 style="color:#F2B300;">Que</h4>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h4 style="color:#0719D4;">Very</h4>
+    	<h4 style="color:#0719D4;">Tengas</h4>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h4 style="color:#D14D39;">Happy</h4>
+    	<h4 style="color:#D14D39;">Feliz</h4>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h4 style="color:#8FAD00;">Birthday</h4>
+    	<h4 style="color:#8FAD00;">CUM</h4>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h4 style="color:#8377E4;">My Dear</h4>
+    	<h4 style="color:#8377E4;">ple</h4>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h4 style="color:#99C96A;">Friend</h4>
+    	<h4 style="color:#99C96A;">Andresito</h4>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h4 style="color:#20CFB4;">Soham</h4>
+    	<h4 style="color:#20CFB4;"> 💚 </h4>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -103,55 +102,53 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>..and travelling daily to Hadapsar :)</p>
-				<p>I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday</p>
+				<p>Hoy es el día de tu CUMpleaños...</p>
+				<p>y sé que no te gusta celebrarlo y es un día equis para ti</p>
+				<p>pero dejame decirte que HOY (hoy y siempre pero mas hoy) </p>
+				<p>agradezco por tu vida y por que estes en la mía</p>
+				<p>No sabía como hacerte ver lo mucho que te quiero estando tan lejos.. </p>
+				<p><strong>intenté mandarte algo xD</strong></p>
+				<p>Pero resulta que es extremadamente caro los envíos hacia boGODta.. </p>
+				<p>entonces pensé.. haré lo único en lo que soy buena.. y te hice este sitio web :) </p>
+				<p>para que entiendas lo importante que eres para mi</p>
+				<p>que espero que hoy y siempre me dejes compartir tus alegrias y logros a tu lado :3 </p>
+				<p>Que aunque estamos lejos siempre haces todo para que yo me sienta cerquita de ti :)</p>
+				<p>Quiero estar cerca de ti todos los CUMpleaños de tu vida :) y que entiendas que cuentas conmigo SIEMPRE</p>
+				<p>Debo agradecerte por todo lo que has hecho por mi, todos estos meses...</p>
+				<p>Por mostrarme uno de los mejores animes que he visto en mi perra vida (hxh)...</p>
+				<p>Por quererme apesar de ser una mexicana llorona y débil...</p>
+				<p>Por compartirme tu dia y dia y confiar en mi</p>
+				<p>Por ayudarme cuando estuve tan mal y ser paciente conmigo</p>
+				<p>Por no dejarme sola... por ser el único que siempre ha estado ahí</p>
+				<p>Gracias a ti tuve un desarrollo de personaje que cambio mi vida, y por eso te estaré siempre agradecida </p>
+				<p>Desde que llegaste a mi vida todo ha mejorado :3  </p>
+				<p>Gracias Andresito por todo lo que haces por mi, y te perdono por criticar tanto mi gusto al picante </p>
+				<p>Te mando muchos abrazos y besos por este día tan especial ;3 </p>
+				<p>Espero de corazón algún día poder dartelos en persona :) </p>
+				<p>No sabes lo mucho que te admiro por que apesar de tu edad.. </p>
+				<p>Eres la persona mas madura, inteligente y centrada que conozco </p>
+				<p>y como olvidar que siempre tienes la razón? jajaja</p>
+				<p>Sé que es muy dificil sorprenderte.. así que espero que esto si sea una sorpresa para ti :3 </p>		
+				<p>Espero que</p>
+				<p>sigas tus metas y logres todo lo que te propones...</p>
+				<p>y sobre todo estar presente siempre.. en cada logro, en cada momento.. hasta el día que me lo permitas quiero seguir a tu lado :) </p>
+				<p>Me haces bien feliz.. la neta.. tu amistad es lo mejor que me ha pasado, he aprendido tanto de ti</p>
+				<p>GRACIAS!! </p>
+				<p>Te quiero como no tienes una pinche idea Colombiano, y no cualquier Colombiano.. el mejor Colombiano de este mundo</p>
+				<p>Feliz CUMpleaños Andresito</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-success" id="turn_on">Prende las luces :3</button>
+					<button class="btn btn-success" id="play">Ponle Play al temazo :3 </button>
+					<button class="btn btn-success" id="bannar_coming">Vamos a decorar :3</button>
+					<button class="btn btn-success" id="balloons_flying">Unos cuantos globos :3</button>
+					<button class="btn btn-success" id="cake_fadein">Pastelito o torta como dicen ustedes :3</button>
+					<button class="btn btn-success" id="light_candle"> Encendamos la velita :3</button>
+					<button class="btn btn-success" id="wish_message">Feliz CUMple Colombiano Hermoso :3 </button>
+					<button class="btn btn-success" id="story">Un mensaje de tu mexicana favorita de sangre veracruzana en tierra de oportunidades .. </button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
