--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     	<h4 style="color:#8377E4;">ple</h4>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h4 style="color:#99C96A;">Andresito</h4>
+    	<h4 style="color:#99C96A;">Andrés</h4>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h4 style="color:#20CFB4;"> 💚 </h4>
+    	<h4 style="color:#20CFB4;"> 💚 🥹 </h4>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -104,51 +104,61 @@
 			<div class="col-md-12">
 				<p>Hoy es el día de tu CUMpleaños...</p>
 				<p>y sé que no te gusta celebrarlo y es un día equis para ti</p>
-				<p>pero dejame decirte que HOY (hoy y siempre pero mas hoy) </p>
+				<p>pero.. HOY y siempre (pero mas hoy)</p>
 				<p>agradezco por tu vida y por que estes en la mía</p>
-				<p>No sabía como hacerte ver lo mucho que te quiero estando tan lejos.. </p>
-				<p><strong>intenté mandarte algo xD</strong></p>
-				<p>Pero resulta que es extremadamente caro los envíos hacia boGODta.. </p>
-				<p>entonces pensé.. haré lo único en lo que soy buena.. y te hice este sitio web :) </p>
+				<p>No sabía como hacerte ver </p> 
+				<p>lo mucho que te quiero estando tan lejos.. </p>
+				<p><strong>intenté mandarte algo xD, pero resulta que</strong></p>
+				<p>es extremadamente caro los envíos hacia boGODta.. </p>
+				<p>entonces pensé.. haré lo único en lo que soy buena..</p>
+				<p> y te hice este sitio web :) </p>
 				<p>para que entiendas lo importante que eres para mi</p>
-				<p>que espero que hoy y siempre me dejes compartir tus alegrias y logros a tu lado :3 </p>
-				<p>Que aunque estamos lejos siempre haces todo para que yo me sienta cerquita de ti :)</p>
-				<p>Quiero estar cerca de ti todos los CUMpleaños de tu vida :) y que entiendas que cuentas conmigo SIEMPRE</p>
-				<p>Debo agradecerte por todo lo que has hecho por mi, todos estos meses...</p>
-				<p>Por mostrarme uno de los mejores animes que he visto en mi perra vida (hxh)...</p>
-				<p>Por quererme apesar de ser una mexicana llorona y débil...</p>
+				<p>Que espero siempre pueda compartir tus alegrias y logros :3 </p>
+				<p>Que aunque estamos lejos.. </p> 
+				<p>siempre haces todo para que yo me sienta cerquita de ti :)</p>
+				<p>Quiero estar cerca de ti todos los CUMpleaños de tu vida :)</p> 
+				<p>y que entiendas que cuentas conmigo SIEMPRE</p>
+				<p>Debo agradecerte por todo lo que has hecho por mi</p>
+				<p>todos estos meses...</p>
+				<p>Por mostrarme el mejor anime(terminado) que he visto en mi perra vida(hxh)...</p>
+				<p>Por quererme aunque soy una mexicana llorona y débil...</p>
 				<p>Por compartirme tu dia y dia y confiar en mi</p>
 				<p>Por ayudarme cuando estuve tan mal y ser paciente conmigo</p>
-				<p>Por no dejarme sola... por ser el único que siempre ha estado ahí</p>
-				<p>Gracias a ti tuve un desarrollo de personaje que cambio mi vida, y por eso te estaré siempre agradecida </p>
+				<p>Por no dejarme sola... </p>
+				<p>por ser el único que siempre ha estado ahí</p>
+				<p>Gracias a ti tuve un desarrollo de personaje..</p> 
+				<p>.. que cambio mi vida, y por eso te estaré siempre agradecida </p>
 				<p>Desde que llegaste a mi vida todo ha mejorado :3  </p>
-				<p>Gracias Andresito por todo lo que haces por mi, y te perdono por criticar tanto mi gusto al picante </p>
+				<p>Gracias Andresito por todo lo que haces por mi.. </p>
+				<p>y te perdono por criticar tanto mi gusto al picante </p>
 				<p>Te mando muchos abrazos y besos por este día tan especial ;3 </p>
 				<p>Espero de corazón algún día poder dartelos en persona :) </p>
-				<p>No sabes lo mucho que te admiro por que apesar de tu edad.. </p>
+				<p>No sabes lo mucho que te admiro.. </p>
 				<p>Eres la persona mas madura, inteligente y centrada que conozco </p>
 				<p>y como olvidar que siempre tienes la razón? jajaja</p>
-				<p>Sé que es muy dificil sorprenderte.. así que espero que esto si sea una sorpresa para ti :3 </p>		
-				<p>Espero que</p>
-				<p>sigas tus metas y logres todo lo que te propones...</p>
-				<p>y sobre todo estar presente siempre.. en cada logro, en cada momento.. hasta el día que me lo permitas quiero seguir a tu lado :) </p>
-				<p>Me haces bien feliz.. la neta.. tu amistad es lo mejor que me ha pasado, he aprendido tanto de ti</p>
-				<p>GRACIAS!! </p>
-				<p>Te quiero como no tienes una pinche idea Colombiano, y no cualquier Colombiano.. el mejor Colombiano de este mundo</p>
-				<p>Feliz CUMpleaños Andresito</p>
+				<p>Sé que es muy dificil sorprenderte.. </p>
+				<p>... así que espero que esto si sea una sorpresa para ti :3 </p>		
+				<p>Espero que.. sigas tus metas y logres todo lo que te propones...</p>
+				<p>y poder estar ahí en cada logro, en cada momento.. </p>
+				<p>hasta el día que me lo permitas quiero seguir a tu lado :) </p>
+				<p>Me haces bien feliz.. la neta.. tu amistad </p>
+				<p>es lo mejor que me ha pasado, he aprendido tanto de ti, GRACIAAAAS!</p>
+				<p>Te quiero como no tienes una pinche idea Colombiano..</p>
+				<p>y no cualquier Colombiano.. el MEJOR Colombiano de este mundo</p>
+				<p>Feliz CUMpleaños Andresito, Con cariño tu Mexicana Favorita 🇲🇽 </p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-success" id="turn_on">Prende las luces :3</button>
-					<button class="btn btn-success" id="play">Ponle Play al temazo :3 </button>
-					<button class="btn btn-success" id="bannar_coming">Vamos a decorar :3</button>
-					<button class="btn btn-success" id="balloons_flying">Unos cuantos globos :3</button>
-					<button class="btn btn-success" id="cake_fadein">Pastelito o torta como dicen ustedes :3</button>
-					<button class="btn btn-success" id="light_candle"> Encendamos la velita :3</button>
-					<button class="btn btn-success" id="wish_message">Feliz CUMple Colombiano Hermoso :3 </button>
-					<button class="btn btn-success" id="story">Un mensaje de tu mexicana favorita de sangre veracruzana en tierra de oportunidades .. </button>
+					<button class="btn btn-success btn-lg" id="turn_on">Prende las luces :3</button>
+					<button class="btn btn-success btn-lg" id="play">Ponle Play al temazo :3 </button>
+					<button class="btn btn-success btn-lg" id="bannar_coming">Vamos a decorar :3</button>
+					<button class="btn btn-success btn-lg" id="balloons_flying">Unos cuantos globos :3</button>
+					<button class="btn btn-success btn-lg" id="cake_fadein">Pastelito o torta como dicen ustedes :3</button>
+					<button class="btn btn-success btn-lg" id="light_candle"> Encendamos la velita :3</button>
+					<button class="btn btn-success btn-lg" id="wish_message">Feliz CUMple Colombiano Hermoso :3 </button>
+					<button class="btn btn-success btn-lg" id="story">Un mensaje de tu mexicana favorita de sangre veracruzana en tierra de oportunidades .. </button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
