--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<p>y que entiendas que cuentas conmigo SIEMPRE</p>
 				<p>Debo agradecerte por todo lo que has hecho por mi</p>
 				<p>todos estos meses...</p>
-				<p>Por mostrarme el mejor anime(terminado) que he visto en mi perra vida(hxh)...</p>
+				<p>Por mostrarme el mejor anime despues de OP, que he visto en mi perra vida(hxh)...</p>
 				<p>Por quererme aunque soy una mexicana llorona y débil...</p>
 				<p>Por compartirme tu dia y dia y confiar en mi</p>
 				<p>Por ayudarme cuando estuve tan mal y ser paciente conmigo</p>
