--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Feliz CUM Andrés</title>
+	<title>Te amo Andrés</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday">
@@ -28,7 +28,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 <body>
-	<div class="loading"></div>
+	<!-- <div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
@@ -159,11 +159,11 @@
 					<button class="btn btn-success btn-lg" id="light_candle"> Encendamos la velita :3</button>
 					<button class="btn btn-success btn-lg" id="wish_message">Feliz CUMple Colombiano Hermoso :3 </button>
 					<button class="btn btn-success btn-lg" id="story">Un mensaje de tu mexicana favorita de sangre veracruzana en tierra de oportunidades .. </button>
-					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
+					
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
