--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 <body>
-	<!-- <div class="loading"></div>
+	<div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
+	<img src="andres.JPG" width="100%" class="balloon-border">
+	<!-- 
     <div class="balloons text-center" id="b1">
     	<h4 style="color:#F2B300;">Que</h4>
     </div>
