--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-	<img src="andres.JPG" width="100%" class="balloon-border">
+	<img src="andres.JPG" width="100%" />
 	<!-- 
     <div class="balloons text-center" id="b1">
     	<h4 style="color:#F2B300;">Que</h4>
