--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
 	<img src="andres.JPG" width="100%" />
+	<div class="container">
+		
+		<div class="row">
+			<div class="col-md-2 col-lg-12 col-xs-2 bulb-holder">
+				<h1 style="color:#057e0b;"> Te amaré hoy y siempre gracias por todo..  </h1>
+				</div>
+				</div>
+				</div>
 	<!-- 
     <div class="balloons text-center" id="b1">
     	<h4 style="color:#F2B300;">Que</h4>
