--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		
 		<div class="row">
 			<div class="col-md-2 col-lg-12 col-xs-2 bulb-holder">
-				<h1 style="color:#057e0b;"> Te amaré hoy y siempre gracias por todo..  </h1>
+				<h1 style="color:#057e0b;"> Te amaré hoy y siempre, gracias por todo..  </h1>
 				</div>
 				</div>
 				</div>
