--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-	<img src="andres.JPG" width="100%" />
+	<!-- <img src="andres.JPG" width="100%" /> -->
 	<div class="container">
 		
 		<div class="row">
@@ -42,7 +42,7 @@
 				</div>
 				</div>
 				</div>
-	<!-- 
+	
     <div class="balloons text-center" id="b1">
     	<h4 style="color:#F2B300;">Que</h4>
     </div>
@@ -173,7 +173,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
